cmake_minimum_required(VERSION 3.9)
project(Signals
	VERSION ${FTENG_SIGNALS_VERSION}
	LANGUAGES CXX
	)

add_library(${PROJECT_NAME} INTERFACE)
add_library(FTengSignals::${PROJECT_NAME} ALIAS ${PROJECT_NAME})

target_include_directories(${PROJECT_NAME}
	INTERFACE
	$<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/include/>
	$<INSTALL_INTERFACE:${CMAKE_INSTALL_INCLUDE_DIR}/>
	)

set(HEADERS
	include/fteng/signals.hpp
	)
source_group(TREE ${CMAKE_CURRENT_LIST_DIR}/include/
	PREFIX ""
	FILES ${HEADERS}
	)

if(NOT FTENG_SIGNALS_BUNDLED)
	install(TARGETS ${PROJECT_NAME}
		EXPORT ${FTENG_SIGNALS_TARGETS}
		INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/
		)
	install(DIRECTORY ${CMAKE_CURRENT_LIST_DIR}/include/
		DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
		)
endif()

